package model.player;

public enum EPlayerState {
    ALIVE,
    UNCONSCIOUS,
    DEAD
}
